// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Indexes Indexes base demo works fine 1`] = `
<base>
  <t-indexes
    sticky="{{true}}"
    bind:select="onSelect"
  >
    <t-indexes-anchor
      index="A"
    />
    <t-cell-group>
      <t-cell
        title="阿坝"
      />
      <t-cell
        title="阿拉善"
      />
      <t-cell
        title="阿里"
      />
      <t-cell
        title="安康"
      />
      <t-cell
        title="安庆"
      />
      <t-cell
        title="鞍山"
      />
      <t-cell
        title="安顺"
      />
      <t-cell
        title="安阳"
      />
      <t-cell
        title="澳门"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="B"
    />
    <t-cell-group>
      <t-cell
        title="北京"
      />
      <t-cell
        title="白银"
      />
      <t-cell
        title="保定"
      />
      <t-cell
        title="宝鸡"
      />
      <t-cell
        title="保山"
      />
      <t-cell
        title="包头"
      />
      <t-cell
        title="巴中"
      />
      <t-cell
        title="北海"
      />
      <t-cell
        title="蚌埠"
      />
      <t-cell
        title="本溪"
      />
      <t-cell
        title="毕节"
      />
      <t-cell
        title="滨州"
      />
      <t-cell
        title="百色"
      />
      <t-cell
        title="亳州"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="C"
    />
    <t-cell-group>
      <t-cell
        title="重庆"
      />
      <t-cell
        title="成都"
      />
      <t-cell
        title="长沙"
      />
      <t-cell
        title="长春"
      />
      <t-cell
        title="沧州"
      />
      <t-cell
        title="常德"
      />
      <t-cell
        title="昌都"
      />
      <t-cell
        title="长治"
      />
      <t-cell
        title="常州"
      />
      <t-cell
        title="巢湖"
      />
      <t-cell
        title="潮州"
      />
      <t-cell
        title="承德"
      />
      <t-cell
        title="郴州"
      />
      <t-cell
        title="赤峰"
      />
      <t-cell
        title="池州"
      />
      <t-cell
        title="崇左"
      />
      <t-cell
        title="楚雄"
      />
      <t-cell
        title="滁州"
      />
      <t-cell
        title="朝阳"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="D"
    />
    <t-cell-group>
      <t-cell
        title="大连"
      />
      <t-cell
        title="东莞"
      />
      <t-cell
        title="大理"
      />
      <t-cell
        title="丹东"
      />
      <t-cell
        title="大庆"
      />
      <t-cell
        title="大同"
      />
      <t-cell
        title="大兴安岭"
      />
      <t-cell
        title="德宏"
      />
      <t-cell
        title="德阳"
      />
      <t-cell
        title="德州"
      />
      <t-cell
        title="定西"
      />
      <t-cell
        title="迪庆"
      />
      <t-cell
        title="东营"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="E"
    />
    <t-cell-group>
      <t-cell
        title="鄂尔多斯"
      />
      <t-cell
        title="恩施"
      />
      <t-cell
        title="鄂州"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="F"
    />
    <t-cell-group>
      <t-cell
        title="福州"
      />
      <t-cell
        title="防城港"
      />
      <t-cell
        title="佛山"
      />
      <t-cell
        title="抚顺"
      />
      <t-cell
        title="抚州"
      />
      <t-cell
        title="阜新"
      />
      <t-cell
        title="阜阳"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="G"
    />
    <t-cell-group>
      <t-cell
        title="广州"
      />
      <t-cell
        title="桂林"
      />
      <t-cell
        title="贵阳"
      />
      <t-cell
        title="甘南"
      />
      <t-cell
        title="赣州"
      />
      <t-cell
        title="甘孜"
      />
      <t-cell
        title="广安"
      />
      <t-cell
        title="广元"
      />
      <t-cell
        title="贵港"
      />
      <t-cell
        title="果洛"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="J"
    />
    <t-cell-group>
      <t-cell
        title="揭阳"
      />
      <t-cell
        title="吉林"
      />
      <t-cell
        title="晋江"
      />
      <t-cell
        title="吉安"
      />
      <t-cell
        title="胶州"
      />
      <t-cell
        title="嘉兴"
      />
      <t-cell
        title="济南"
      />
      <t-cell
        title="鸡西"
      />
      <t-cell
        title="荆州"
      />
      <t-cell
        title="江门"
      />
      <t-cell
        title="基隆"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="K"
    />
    <t-cell-group>
      <t-cell
        title="昆明"
      />
      <t-cell
        title="开封"
      />
      <t-cell
        title="康定"
      />
      <t-cell
        title="喀什"
      />
    </t-cell-group>
  </t-indexes>
</base>
`;

exports[`Indexes Indexes custom demo works fine 1`] = `
<custom>
  <t-indexes
    indexList="{{
      Array [
        "B",
        "C",
        "D",
        "F",
        "G",
        "J",
        "K",
      ]
    }}"
    sticky="{{true}}"
    bind:select="onSelect"
  >
    <t-indexes-anchor
      index="B"
    >
      <wx-view
        class="capsule"
      >
        B
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="北京"
      />
      <t-cell
        title="白银"
      />
      <t-cell
        title="保定"
      />
      <t-cell
        title="宝鸡"
      />
      <t-cell
        title="保山"
      />
      <t-cell
        title="包头"
      />
      <t-cell
        title="巴中"
      />
      <t-cell
        title="北海"
      />
      <t-cell
        title="蚌埠"
      />
      <t-cell
        title="本溪"
      />
      <t-cell
        title="毕节"
      />
      <t-cell
        title="滨州"
      />
      <t-cell
        title="百色"
      />
      <t-cell
        title="亳州"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="C"
    >
      <wx-view
        class="capsule"
      >
        C
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="重庆"
      />
      <t-cell
        title="成都"
      />
      <t-cell
        title="长沙"
      />
      <t-cell
        title="长春"
      />
      <t-cell
        title="沧州"
      />
      <t-cell
        title="常德"
      />
      <t-cell
        title="昌都"
      />
      <t-cell
        title="长治"
      />
      <t-cell
        title="常州"
      />
      <t-cell
        title="巢湖"
      />
      <t-cell
        title="潮州"
      />
      <t-cell
        title="承德"
      />
      <t-cell
        title="郴州"
      />
      <t-cell
        title="赤峰"
      />
      <t-cell
        title="池州"
      />
      <t-cell
        title="崇左"
      />
      <t-cell
        title="楚雄"
      />
      <t-cell
        title="滁州"
      />
      <t-cell
        title="朝阳"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="D"
    >
      <wx-view
        class="capsule"
      >
        D
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="大连"
      />
      <t-cell
        title="东莞"
      />
      <t-cell
        title="大理"
      />
      <t-cell
        title="丹东"
      />
      <t-cell
        title="大庆"
      />
      <t-cell
        title="大同"
      />
      <t-cell
        title="大兴安岭"
      />
      <t-cell
        title="德宏"
      />
      <t-cell
        title="德阳"
      />
      <t-cell
        title="德州"
      />
      <t-cell
        title="定西"
      />
      <t-cell
        title="迪庆"
      />
      <t-cell
        title="东营"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="F"
    >
      <wx-view
        class="capsule"
      >
        F
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="福州"
      />
      <t-cell
        title="防城港"
      />
      <t-cell
        title="佛山"
      />
      <t-cell
        title="抚顺"
      />
      <t-cell
        title="抚州"
      />
      <t-cell
        title="阜新"
      />
      <t-cell
        title="阜阳"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="G"
    >
      <wx-view
        class="capsule"
      >
        G
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="广州"
      />
      <t-cell
        title="桂林"
      />
      <t-cell
        title="贵阳"
      />
      <t-cell
        title="甘南"
      />
      <t-cell
        title="赣州"
      />
      <t-cell
        title="甘孜"
      />
      <t-cell
        title="广安"
      />
      <t-cell
        title="广元"
      />
      <t-cell
        title="贵港"
      />
      <t-cell
        title="果洛"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="J"
    >
      <wx-view
        class="capsule"
      >
        J
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="揭阳"
      />
      <t-cell
        title="吉林"
      />
      <t-cell
        title="晋江"
      />
      <t-cell
        title="吉安"
      />
      <t-cell
        title="胶州"
      />
      <t-cell
        title="嘉兴"
      />
      <t-cell
        title="济南"
      />
      <t-cell
        title="鸡西"
      />
      <t-cell
        title="荆州"
      />
      <t-cell
        title="江门"
      />
      <t-cell
        title="基隆"
      />
    </t-cell-group>
    <t-indexes-anchor
      index="K"
    >
      <wx-view
        class="capsule"
      >
        K
      </wx-view>
    </t-indexes-anchor>
    <t-cell-group>
      <t-cell
        title="昆明"
      />
      <t-cell
        title="开封"
      />
      <t-cell
        title="康定"
      />
      <t-cell
        title="喀什"
      />
    </t-cell-group>
  </t-indexes>
</custom>
`;
